some of the issues solved (#228, #230, #231, ...): layout issues; wrong texts in static pages; missing mail links;

--- a/open_municipio/static/less/styles.less
+++ b/open_municipio/static/less/styles.less
@@ -126,7 +126,7 @@ body {
 
   footer {
     min-height: 300px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     color: @white;
 
     h2 { margin-bottom: 10px; }
